<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:background="@color/pub_background"
        android:layout_height="match_parent"
        tools:context=".ui.onboarding.members.register.RegisterFragment">



    <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/module_6"
            android:textColor="@color/pub_text_color_primary"
            android:textSize="@dimen/font_title"
            android:text="We believe you've already \nmade an account for your \ndearly pet?"/>


    <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_cat_gif"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_cat"
            android:layout_height="300dp"/>


    <androidx.appcompat.widget.AppCompatButton

            android:layout_margin="@dimen/module_2"
            android:layout_gravity="center|bottom"
            android:id="@+id/btn_google_signin"
            android:layout_width="240dp"
            android:padding="8dp"
            android:background="@color/colorAccent"
            android:text="SignIn with google"
            android:textColor="#fff"
            android:textAllCaps="true"
            android:layout_height="wrap_content"/>
</FrameLayout>