...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.members.post.PostFragment">

    <androidx.appcompat.widget.Toolbar
            android:background="@color/white"
            android:id="@+id/toolbar_home"
            android:layout_width="match_parent"
            android:layout_height="55dp">

        <androidx.appcompat.widget.LinearLayoutCompat
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


            <com.google.android.material.button.MaterialButton
                    android:id="@+id/fab_upload"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    app:icon="@drawable/ic_add_post"
                    app:iconTint="@color/pub_color_accent"
                    android:text="Create new post"
...
